<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MusicalShares</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_distribute">Distribute Notes</string>
    <string name="action_start">Start Playing</string>
    <string name="action_getoffset">Get Offset</string>
    <string name="action_reset">Reset</string>

</resources>
