<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="comingle.musicalshares.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item android:id="@+id/action_distribute" android:title="@string/action_distribute" android:orderInCategory="100" android:showAsAction="ifRoom" android:visible="false"></item>
    <item android:id="@+id/action_start" android:showAsAction="ifRoom" android:title="@string/action_start" android:visible="false" android:orderInCategory="100"></item>
    <item android:id="@+id/action_getoffset" android:orderInCategory="100" android:title="@string/action_getoffset" android:showAsAction="ifRoom"></item>
    <item android:id="@+id/action_reset" android:title="@string/action_reset" android:orderInCategory="100" android:showAsAction="ifRoom" android:visible="false"></item>

</menu>
